app/design/frontend/wc/b2b_eshop/web/css/style.less
@import 'source/_variables.less';
@import 'source/_options.less';

html{
	overflow-x: hidden;
}
body{
	background: @general_bg_color;
	font-family: wuerthbook; 
    line-height:1.6;
    font-size: 1.6rem;
    font-style: normal;
	color: @general_text_color;
	text-align: left;
	overflow-x: hidden;
}
html,body {
	display: block !important;
}

@font-face {
     font-family: 'wuerthbook';
     src: url('../fonts/wuerth-font/wuerthbook_webfont.eot');
     src: url('../fonts/wuerth-font/wuerthbook_webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/wuerth-font/wuerthbook_webfont.woff2') format('woff2'), url('../fonts/wuerth-font/wuerthbook_webfont.woff') format('woff'), url('../fonts/wuerth-font/wuerthbook_webfont.ttf') format('truetype'), url('../fonts/wuerth-font/wuerthbook_webfont.svg#wuerthbook') format('svg');
     font-weight: 400;
     font-style: normal
     }

  @font-face {
     font-family: 'wuerthbold';
     src: url('../fonts/wuerth-font/wuerthbold_webfont.eot');
     src: url('../fonts/wuerth-font/wuerthbold_webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/wuerth-font/wuerthbold_webfont.woff2') format('woff2'), url('../fonts/wuerth-font/wuerthbold_webfont.woff') format('woff'), url('../fonts/wuerth-font/wuerthbold_webfont.ttf') format('truetype'), url('../fonts/wuerth-font/wuerthbold_webfont.svg#wuerthbold') format('svg');
     font-weight: 700;
     font-style: normal
     }

  @font-face {
  	font-family: 'Wuerthicons';
  	src:  url('../fonts/icon/Wuerthicons.eot?heiu07');
  	src:  url('../fonts/icon/Wuerthicons.eot?heiu07#iefix') format('embedded-opentype'),
    url('../fonts/icon/Wuerthicons.ttf?heiu07') format('truetype'),
    url('../fonts/icon/Wuerthicons.woff?heiu07') format('woff'),
    url('../fonts/icon/Wuerthicons.svg?heiu07#Wuerthicons') format('svg');
  	font-weight: normal;
  	font-style: normal;
  	font-display: block;
}


a:visited, .alink:visited{
 	color: @general_link_color;
 }
a{ 
	color: @general_text_color;
	.transition();
	&:hover{
		text-decoration: none;
		color:@general_link_hover_color;
	}
	&:focus {
		outline: none;
		color:@general_link_hover_color;
	}
	&:active {
		color:@general_link_hover_color;
	}
 }

 .primary-button, .action.primary.primary-button{
 	background-color:#cc0000;
 	border-radius:30px;
 	border-color:#cc0000;
 	padding:6px 20px;
 	font-family:'wuerthbold';
 	text-align:center;
 	color:#ffffff;
 	font-size:1.6rem;
 	display:inline-block;
 	min-height:40px;
 }
 .btn160{
 	width:160px
 }

 a:focus.primary-button,a:active.primary-button, a:hover.primary-button{
 	color:#ffffff;
 	text-decoration:none;
 }

 .paddingtop30{
 	padding-top:30px;
 }

 .paddingtop20{
 	padding-top:20px
 }
 .paddingbotm30{
 	padding-bottom:30px;
 }
  .paddingbotm20{
 	padding-bottom:20px;
 }
 .paddingl0{
 	padding-left:0;
 }
 .paddingRight0{
 	padding-right:0;
 }
 .margin0{
 	margin:0;
 }
 .textcenter{
 text-align:center;
 }
 section, .registration-bg, .carousel-wrap,  .promotion-banners, .logBannerContainer, .pt-banner-container{
 	margin-bottom:60px;
 }
 .registration-bg{
 	margin-top:60px;
 }
 .carousel-wrap{
 	margin-top:0;
 }

 .category-list-sidebar {

 	.sidebarCatName{
  			margin-left:20px;
  			word-break:break-word;
  			font-family:@bodyfont;
			font-weight:normal;
  			}
    .sidebarCatImg{
  			flex:none;
  			width:30px;
  			padding:2px;
  			height:30px;
  		}
 	ul{
 		border:solid 1px rgba(0, 0, 0, 12%);
 		 li{
 			list-style:none;
 			padding:10px;
 			font-weight:bold;
 			border-bottom:solid 1px rgba(0, 0, 0, 12%);
 			margin:0;
 			display:flex;

 		&:last-child::before{
 		content:"";
 		padding-right:40px;
  		}
  		&:last-child{
 			border:none;
 			font-family:'wuerthbold';
  		}

  		&:first-child{
 			background-color:rgba(0, 0, 0, 12%);
 			font-family:'wuerthbold';
  		}
  		&:before{
  			content:"\eb47";
 			font-weight:bold;
 			padding-right:20px;
 			font-family:'Wuerthicons';
  		}
  		a{
   			font-family:'wuerthbold';
   			display:flex;
  		}
  }
 }
 }
  .cat-arrow{

  	   ul li{

  		    &:before{
  				display:none;
  			}

  			&:first-child{
  				background:none;
  			}
  }  	 
  }

  	.cat-list-icon{
			display:block;
			line-height:0;
			margin-bottom:30px;
	}

	.cat-list-icon img{
			width:32px;
			height:32px;
	}
	.catlist-box{
		border:solid 1px rgba(0, 0, 0, 12%);
		margin-bottom:30px;
		padding:20px 10px;
	}


.wc-wishlist{
	width:34px;
	height:34px;
	display:inline-block;
	box-shadow:0px 3px 8px 0px #cccccc;
    position:relative;
    border-radius:50%;
    background:url(../images/compare-wishlist.svg) right -3px top -1px;

}
.compare{
	width:34px;
	height:34px;
	display:inline-block;
	box-shadow:0px 3px 8px 0px #cccccc;
    position:relative;
    border-radius:50%;
    background:url(../images/compare-wishlist.svg) left -2px top -2px;
}


.wc-wishlist:hover{
	content:"";
	background:url(../images/compare-wishlist.svg) right -3px bottom -4px;
	
}
.compare:hover{
	background:url(../images/compare-wishlist.svg) left -2px bottom -4px;
	
}

.wishlist-text, .compare-text{
	display:none;
}
.addToCartButton{
	margin-bottom:20px;
	float:left;
}

.iconWrapper{
	float:right;
	margin-bottom:20px;
}

.products-grid .product-item-actions {
	    margin:0;
	    position:inherit;
	    display:flow-root;
	    width:100%;
	    margin-top:20px;
	}

.product-item-details a.product-item-link{
		min-height:51px;
		display:block;
}

li.product-item.odd.last{
	margin-bottom:20px;
}

.block-compare .actions-toolbar{
	margin-top:20px;
}
.block-compare .product-item .product-item-name{
	margin-left:30px;
}
span.counter.qty{
	font-size:1.6rem;
	color:rgba(0, 0, 0, 60%);
	margin:0 10px;
}
.actions-toolbar .primary{
	float: inherit;
	display:inline-block;
	margin-right:20px;
}

.actions-toolbar .secondary{
	float: inherit;
	display:inline-block;
	vertical-align:middle;
}

.actions-toolbar .secondary a{
	color:#0093DD;
}
/* ... */

